--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -56,6 +56,16 @@ main img
 {
   margin: 0;
 }
+@media screen and (max-width: 560px){
+  .video{
+    padding: 1rem 0px;
+  }
+}
+@media screen and (min-width: 1557px) {
+  .video{
+    padding: 1rem 6rem;
+  }
+}
 
 .vidOne
 {
